<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:background="@android:color/holo_blue_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kantai.androidexampledemo.MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/Main_Button_for_Ch01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="Main_Button_Click"
            android:text="@string/Main_Button_Ch01_Title"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/Main_Button_for_Ch02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Main_Button_for_Ch01"
            android:layout_marginBottom="10dp"
            android:onClick="Main_Button_Click"
            android:text="@string/Main_Button_Ch02_Title"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/Main_Button_for_Ch03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Main_Button_for_Ch02"
            android:layout_marginBottom="10dp"
            android:onClick="Main_Button_Click"
            android:text="@string/Main_Button_Ch03_Title"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/Main_Button_for_Ch04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Main_Button_for_Ch03"
            android:layout_marginBottom="10dp"
            android:onClick="Main_Button_Click"
            android:text="@string/Main_Button_Ch04_Title"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/Main_Button_for_Ch05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Main_Button_for_Ch04"
            android:layout_marginBottom="10dp"
            android:onClick="Main_Button_Click"
            android:text="@string/Main_Button_Ch05_Title"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/Main_Button_for_Ch06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Main_Button_for_Ch05"
            android:layout_marginBottom="10dp"
            android:onClick="Main_Button_Click"
            android:text="@string/Main_Button_Ch06_Title"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

    </RelativeLayout>
</ScrollView>